[gd_scene load_steps=6 format=3 uid="uid://bj6nq4xk1n7fe"]

[ext_resource type="Script" path="res://main.gd" id="1_m387k"]
[ext_resource type="PackedScene" uid="uid://ninor6rfhl1y" path="res://scenes/paddle.tscn" id="2_6i2m4"]
[ext_resource type="PackedScene" uid="uid://dcfw0i0ug11yc" path="res://scenes/wall.tscn" id="5_fv0fe"]
[ext_resource type="PackedScene" uid="uid://c2msteevawecd" path="res://scenes/hud.tscn" id="6_8ntav"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_75lrg"]
a = Vector2(-574, 24)
b = Vector2(561, 25)

[node name="Main" type="Node2D"]
script = ExtResource("1_m387k")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1500.0
offset_bottom = 1000.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Paddle" parent="." instance=ExtResource("2_6i2m4")]
position = Vector2(561, 571)

[node name="Walls" type="Node2D" parent="."]

[node name="Wall3" parent="Walls" instance=ExtResource("5_fv0fe")]
position = Vector2(-15, 330)

[node name="Wall" parent="Walls" instance=ExtResource("5_fv0fe")]
position = Vector2(1170, 371)

[node name="Wall2" parent="Walls" instance=ExtResource("5_fv0fe")]
position = Vector2(1170, 136)

[node name="Wall4" parent="Walls" instance=ExtResource("5_fv0fe")]
position = Vector2(1170, 605)

[node name="Wall5" parent="Walls" instance=ExtResource("5_fv0fe")]
position = Vector2(-15, 111)
rotation = -3.14159

[node name="Wall6" parent="Walls" instance=ExtResource("5_fv0fe")]
position = Vector2(-15, 547)
rotation = -3.14159

[node name="HUD" parent="." instance=ExtResource("6_8ntav")]

[node name="VictoryLine" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VictoryLine"]
position = Vector2(575, -60)
shape = SubResource("SegmentShape2D_75lrg")

[node name="GameOverLine" type="Area2D" parent="."]
position = Vector2(1, 672)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOverLine"]
position = Vector2(571, -4)
shape = SubResource("SegmentShape2D_75lrg")

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="body_entered" from="VictoryLine" to="." method="_on_victory_line_body_entered"]
[connection signal="body_entered" from="GameOverLine" to="." method="_on_game_over_line_body_entered"]
